# School-Admin-Dashboard

./: Cargo.toml  README.md  index.html
src/: lib.rs  main.rs
src/components/: main_section.rs  mod.rs  sidebar.rs
src/components/ui/: mod.rs  school_attendance.rs  title.rs  top_nav.rs
